@@ -1,6 +1,9 @@
 2006-05-17  Ales Hakl  <ales at hakl dot net>
 
+	* src/strings.c: Added DFSCH_ARG_END to mark ends of argument lists
+
 	* src/number.c (native_abs): Absolute value function
+	(native_exp): Exponent
 
 	* NEWS: Release 0.2.0-pre2
 
